# Kestrel

./: .gitignore  CLI.md  Cargo.toml  LICENSE  README.md  build.ps1  install.ps1
.github/workflows/: release.yml
antiproton/: Cargo.toml
antiproton/src/: binfmt.rs  lib.rs  pe.rs  syscall.rs
beak-fs/: Cargo.toml
beak-fs/src/: lib.rs
kestrel-bridge/: Cargo.toml
kestrel-bridge/src/: blk.rs  console.rs  hypercall.rs  lib.rs  net.rs  ring_buffer.rs
kestrel-host/: Cargo.toml
kestrel-host/src/: ipc.rs  loader.rs  main.rs  snapshot.rs  uml.rs  whpx.rs
kestrel-init/: Cargo.toml
kestrel-init/src/: main.rs
kestrel-ipc/: Cargo.toml
kestrel-ipc/src/: lib.rs
kestrel-pkg/: Cargo.toml
kestrel-pkg/src/: convert.rs  kstl.rs  main.rs
kestrel-term/: Cargo.toml
kestrel-term/src/: main.rs
linux-source/: bzImage
reverse-proton/: Cargo.toml
reverse-proton/src/: binfmt.rs  lib.rs
