[package]
name = "kestrel-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kestrel-host"
path = "src/main.rs"

[dependencies]
windows = { version = "0.62", features = [
    "Win32_System_Memory",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Hypervisor",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_Kernel",
] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
