[package]
name = "kestrel-ipc"
version = "0.1.0"
edition = "2021"

[lib]
name = "kestrel_ipc"
crate-type = ["rlib"]

[dependencies]
anyhow = "1"
log = "0.4"
crossbeam-channel = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_Pipes",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
] }
