[package]
name = "kestrel-pkg"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kestrel-pkg"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
byteorder = "1"
tempfile = "3"
beak-fs = { path = "../beak-fs" }
